--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.1",
     "react-github-calendar": "^2.0.2",
     "react-router-dom": "^5.2.0",
