--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "devicon": "^2.15.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-github-calendar": "^2.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-tooltip": "^4.2.18",
+    "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
